public/app/app.css
@font-face {
    font-family: magic-school;
    src: url('/fonts/MagicSchool.ttf');
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    height: 100%;
}

body {
    position: relative;
    font-family: magic-school, serif;
    height: 100%;
    /* background: url("/img/brick.png"); */
    -webkit-background-size:;
    background-size: cover;
}

#main-wrapper {
    height: 100%;
    /*min-height: 100%;*/
    margin: 0 auto;
    padding: 0 auto;
    position: relative;
    width: auto;
}

@media (min-width: 800px) {
    #main-wrapper {
        width: 800px;
    }
}

.hourglass {
    height: 100%;
    text-align: center;
    display: inline-block;
    width: 24%;
}

.hourglass .container {
    position: relative;
    height: 100%;
    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox; /* TWEENER - IE 10 */
    display: -webkit-flex; /* NEW - Chrome */
    display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
    -ms-flex-direction: column;
    -moz-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
}

.hourglass .house-name {
    font-size: 3em;
}

.hourglass .hourglass-body {
    -webkit-flex: 1; /* Safari 6.1+ */
    -ms-flex: 1; /* IE 10 */
    flex: 1;
    margin: auto;
    position: relative;
    width: 65%;
}

.hourglass .hourglass-body .top {
    height: 20%;
    width: 100%;
}

.hourglass .hourglass-body .middle {
    position: relative;
    height: 80%;
    width: 100%;
}

.hourglass .hourglass-body .middle .sand {
    position: absolute;
    bottom: 0;
}

.hourglass .hourglass-body .sand {
    height: 50px;
    width: 100%;
    transition: height 0.5s linear;
}

.hourglass[data-house="slytherin"] .hourglass-body .sand {
    background-image: url('/img/sand_sly.png');
}

.hourglass[data-house="ravenclaw"] .hourglass-body .sand {
    background-image: url('/img/sand_rav.png');
}

.hourglass[data-house="gryffindor"] .hourglass-body .sand {
    background-image: url('/img/sand_gry.png');
}

.hourglass[data-house="hufflepuff"] .hourglass-body .sand {
    background-image: url('/img/sand_huf.png');
}

.hourglass .hourglass-body .bottom {
    width: 100%;
    height: 100px;
    position: absolute;
    bottom: -100px;
    z-index: 5;
}

.hourglass .house-crest {
}

.hourglass .house-crest img {
    position: relative;
    width: 100%;
    z-index: 10;
}

.hourglass .score {
    font-size: 2em;
}

